Overflow Correction

--- a/global.css
+++ b/global.css
@@ -141,7 +141,7 @@ input[ type="checkbox" ]{
 
 .tableWrapper{
 	position:relative;
-	overflow-y: auto;
+	overflow: auto;
 	border-bottom: 0.1em solid var(--color1);
 	font-size: 0.9em;
 	margin: 0.5em auto;
@@ -151,7 +151,6 @@ table{
 	border-collapse: collapse;
 	min-width: 50vw;
 	max-width: 90vw;
-	overflow-x: auto;
 }
 
 thead th{
